fix posts list <p> alignment

--- a/app/root.module.css
+++ b/app/root.module.css
@@ -130,8 +130,6 @@ p {
 @media screen and (min-width: 768px) {
   p {
     max-width: min(70vw, 1100px);
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 @media screen and (min-width: 768px) {
