--- a/app/routes/__main/news/index.module.css
+++ b/app/routes/__main/news/index.module.css
@@ -21,3 +21,6 @@ ul.posts > li hr {
 ul.posts > li:last-child hr {
   display: none;
 }
+ul.posts > li p {
+  margin-left: 0;
+}
